Fixed header spacing, Updated index.html styling, Fixed header on rcp pages

--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
-.a1 {
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
-    height: auto;
-    width: 300px;
-    float: left;
-    padding-right: 10px;
-    margin-right: 20px;
+.header {
 
+    width: 100%;
+    height: 80px;
+    display: block;
+    background-color: darkslategrey;
     
 }
 
@@ -21,17 +24,9 @@
 
 }
 
-body {
-
-    background-color: whitesmoke;
-    
-}
-
 #hometitle {
 
-    background-color: black;
     color: whitesmoke;
-    height: 75px;
     text-align: center;
     font-size: 36px;
 }
@@ -49,3 +44,63 @@ button {
     width: 100px;
     height: 100px;
 }
+
+.recipes {
+
+    display: grid;
+    height: 700px;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: repeat(7, 1fr);
+    grid-gap: 15px;
+
+}
+
+.recipe-item {
+    
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.507);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pancake {
+
+    color: blanchedalmond;
+    background-image: url(https://images.unsplash.com/photo-1567620905732-2d1ec7ab7445?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=780&q=80);
+    background-size: cover;
+    background-position: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: multiply;
+    grid-row: span 8;
+    grid-column: span 3;
+
+}
+
+.soup , .salad {
+
+    grid-row: span 4;
+    grid-column: span 4;
+
+}
+
+.soup {
+
+    color: blanchedalmond;
+    background-image: url(https://images.unsplash.com/photo-1476718406336-bb5a9690ee2a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8M3x8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60);
+    background-size: cover;
+    background-position: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: multiply;
+}
+
+.salad {
+
+    color: blanchedalmond;
+    background-image: url(https://images.unsplash.com/photo-1540420773420-3366772f4999?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8c2FsYWR8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60);
+    background-size: cover;
+    background-position: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: multiply;
+}
+
